# buffered-io

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  read.rs  write.rs
src/asynch/: mod.rs  read.rs  write.rs
src/read/: asynch.rs
src/write/: asynch.rs
