[package]
name = "buffered-io"
version = "0.1.0"
edition = "2021"
description = "Bufferering types for embedded-io"
readme = "README.md"
repository = "https://github.com/rmja/buffered-io"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
license = "MIT / Apache-2.0"
keywords = ["embedded", "buffer", "embedded-io", "read", "write"]
exclude = [".github"]

[features]
async = ["embedded-io/async"]

[dependencies]
embedded-io = { version = "0.4" }

[dev-dependencies]
embedded-io = { version = "0.4", features = ["async", "std"] }
tokio = { version = "1", features = ["macros", "rt"] }