[package]
name = "buffered-io"
version = "0.5.4"
edition = "2021"
description = "Bufferering types for embedded-io"
readme = "README.md"
repository = "https://github.com/rmja/buffered-io"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
license = "MIT / Apache-2.0"
keywords = ["embedded", "buffer", "embedded-io", "read", "write"]
exclude = [".github"]

[dependencies]
embedded-io = { version = "0.7" }
embedded-io-async = { version = "0.7" }

[dev-dependencies]
embedded-io-async = { version = "0.7", features = ["std"] }
embedded-io-adapters = { version = "0.7", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4"
